[package]
name = "distributed_control"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
petgraph = "0.6.4"

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "katex_header.html" ]
