[package]
name = "distributed_control"
version = "0.2.0"
edition = "2021"
authors = ["Justin Whitaker <justinwhtkr@gmail.com>"]
categories = ["mathematics", "science::robotics"]
description = "Create, analyze and simulate multi-agent, distributed control systems"
keywords = ["control", "distributed", "multi-agent"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/molasses11/rust-distributed-control"
include = ["/src/**", "/Cargo.toml", "/LICENSE-MIT"s, "/LICENSE-APACHE", "/README.md", "/katex_header.html"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
petgraph = "0.6.4"

[package.metadata.docs.rs]
rustdoc-args = ["--html-in-header", "katex_header.html"]
